--- a/stepx/src/main/resources/templates/shop.html
+++ b/stepx/src/main/resources/templates/shop.html
@@ -151,6 +151,13 @@
               </select>
             </div>
           </div>
+          <div >
+            <div class="btn-wrap">
+              <a href="/create-product">
+              <button href="/create-product" class="btn btn-black btn-medium text-uppercase hvr-sweep-to-right" style="margin-bottom: 30px;">Create Shoe</button>
+            </a>
+            </div>
+          </div>
           <div class="product-content product-store d-flex justify-content-between flex-wrap">
             <!-- Product Card element-->
             {{#shoes}}
