--- a/stepx/src/main/resources/templates/partials/quick-view-modal.html
+++ b/stepx/src/main/resources/templates/partials/quick-view-modal.html
@@ -1,7 +1,7 @@
 {{#product}}
 <div class="col-lg-12 col-md-12 me-3">
     <div class="image-holder">
-      <img src="{{images.0}}" alt="Shoes" style="width: 100%;max-height: 100%;">
+      <img src="/shop/{{id}}/image/1" alt="Shoes" style="width: 100%;max-height: 100%;">
     </div>
   </div>
   <div class="col-lg-12 col-md-12">
@@ -15,7 +15,7 @@
         </div>
         <span class="product-price fs-3">${{price}}</span>
         <div class="product-details">
-          <p class="fs-7">{{shortDescription}}</p>
+          <p class="fs-7">{{shortdescription}}</p>
         </div>
       </div>
     </div> 
