create product fix to single product.

--- a/stepx/src/main/resources/templates/create-product.html
+++ b/stepx/src/main/resources/templates/create-product.html
@@ -91,10 +91,15 @@
                             </div>
                         
                             <div class="mb-3">
-                                <label for="longDescription" class="form-label">Description</label>
-                                <textarea id="longDescription" name="longDescription" class="form-control ps-3 text-input" rows="5" required></textarea>
+                                <label for="ShortDescription" class="form-label">Short Description</label>
+                                <textarea id="ShortDescription" name="ShortDescription" class="form-control ps-3 text-input" rows="5" required></textarea>
                             </div>
-                        
+                            
+                            <div class="mb-3">
+                                <label for="LongDescription" class="form-label">Long Description</label>
+                                <textarea id="LongDescription" name="LongDescription" class="form-control ps-3 text-input" rows="5" required></textarea>
+                            </div>
+
                             <div class="row">
                                 <div class="col-md-6 mb-3">
                                     <div class="input-group">
