reviews working with picture profile

--- a/stepx/src/main/resources/templates/single-product.html
+++ b/stepx/src/main/resources/templates/single-product.html
@@ -194,7 +194,7 @@
                 <div class="col-lg-6 d-flex flex-wrap"> <!-- todo contenedor de 1 review-->
                   <div class="col-md-2 me-3 mb-3">
                     <div class="image-holder">
-                      <img src="images/review-item1.jpg" alt="review" class="img-fluid">
+                      <img src="/shop/{{user.id}}/imageUser" alt="review" class="img-fluid">
                     </div>
                   </div>
                   <div class="col-md-8">
