reviews with loading actual dates

--- a/stepx/src/main/resources/templates/single-product.html
+++ b/stepx/src/main/resources/templates/single-product.html
@@ -208,7 +208,7 @@
                       </div>
                       <div class="review-header">
                         <span class="author-name">{{user.username}}</span>
-                        <span class="review-date"> 03/07/2023</span>
+                        <span class="review-date">{{formattedDate}}</span>
                       </div>
                       <p id="textReview">{{description}}</p>
                       <button id="deleteReviewButton"><i class="fa-solid fa-trash"></i></button>
