--- a/stepx/src/main/resources/templates/partials/loadMoreShoe.html
+++ b/stepx/src/main/resources/templates/partials/loadMoreShoe.html
@@ -6,11 +6,11 @@
                   <div class="cart-concern position-absolute d-flex justify-content-center">
                   <div class="cart-button d-flex gap-2 justify-content-center align-items-center">
                     <!--Delete Buttom-->
-                      <button type="button" class="btn btn-light" data-bs-target="#deleteConfirmationModal" data-bs-toggle="modal">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
-                          <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"/>
-                        </svg>
-                      </button>
+                    <button type="button" onclick="openModal('{{id}}','delete')"  class="btn btn-light" data-bs-toggle="modal" data-bs-target="#modaltoggle">
+                      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                        <path d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"/>
+                      </svg>
+                    </button>
                       <!--Edit Buttom-->
                     <a href="/edit-product/{{id}}">
                       <button type="button" class="btn btn-light">
